--- a/pokemonInfo.html
+++ b/pokemonInfo.html
@@ -25,7 +25,7 @@
 <body>
     <section class="content">
 
-        <div id="pokemonInfo" class="pokemonInfo">
+        <div id="pokemonInfo" class="pokemons">
             
         </div>
 
