--- a/pokemonInfo.html
+++ b/pokemonInfo.html
@@ -33,7 +33,9 @@
 
 
     <!--   Scripts JS   -->
+    <script src="/assets/js/pokemon-model.js"></script>
     <script src="/assets/js/poke-api.js"></script>
+    <script src="/assets/js/main.js"></script>
     <script src="/assets/js/pokemonInfo.js"></script>
 
 </body>
